[package]
name = "red-editor"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
version = "0.2.1"
description = "A Rust Editor - red is a line-oriented text editor, based on the popular ed utility."
repository = "https://github.com/badboy/red"
homepage = "https://github.com/badboy/red"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
argh = "0.1.10"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.9.1"
rustyline = "12.0.0"

[[bin]]
name = "red"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
